# linux-application-example

./: .gitignore  README.md
alsa/: README.md  alsa_capture.c  alsa_player.c
framebuffer/: framebuffer.c
helix_player/: CMakeLists.txt  README.md  alsa.c  helix_player.c
helix_player/libhelix-mp3/real/: assembly.h
joystick/: README.md  joystick.c
minimp3_player/: CMakeLists.txt  README.md  alsa.c  minimp3_player.c
